# AICONic_ScanDy

./: .gitmodules  LICENSE  README.md  cluster_config.yml
aiconic_scandy/: scanpath_cuda_env.yml
aiconic_scandy/motion_segmentation/EM-Flow-Segmentation/: run_for_sequence.py
aiconic_scandy/motion_segmentation/EM-Flow-Segmentation/Models/: CoherenceNet.py  LitBackbone.py  LitHead.py  LitSegmentationModel.py
aiconic_scandy/motion_segmentation/EM-Flow-Segmentation/Models/Backbones/: unet.py
aiconic_scandy/motion_segmentation/EM-Flow-Segmentation/Models/CoherenceNets/: MethodeB.py
aiconic_scandy/semantic_segmentation/: README.md
aiconic_scandy/semantic_segmentation/sam-hq/segment_anything.egg-info/: PKG-INFO  SOURCES.txt
aiconic_scandy/semantic_segmentation/sam-hq/segment_anything/modeling/: mask_decoder_hq.py
aiconic_scandy/src/: GazeFilter.py  ObjectSegmentationFilter.py  TaskRelevantFilter.py  combined_scanpaths_plot.py  data_processing.py  data_processing_hq.py  data_visu.ipynb  experiment_runner.py  experiment_util.py  gt_scanpath_eval.py  kf.py  result_figs.ipynb  run_experiment.py  scanpath_eval.ipynb  scanpath_producer.py  scanpath_utils.py  srun_summary_plots_hpc.py  summary_plots.py  summary_plots_hpc.py  visu_obj_evidence.py  visualization_eval_utils.py
result_data/: df_res_gt_fov_all.csv
result_data/2024-05-14-11-03-23_TEST_base_task0.0_entropy0.11_dv3.0_sig0.3/: df_res_fov.csv
result_data/2024-05-14-11-03-26_TEST_3SEC_gtObj_task0.0_entropy0.11_dv3.0_sig0.3/: df_res_fov.csv
result_data/2024-05-14-11-16-11_TEST_base_task0.0_entropy0.0_dv2.5_sig0.25/: df_res_fov.csv
result_data/2024-05-22-14-22-57_TEST_base_task0.0_entropy0.25_dv3.5_sig0.4/: df_res_fov.csv
result_data/2024-05-24-18-45-25_TEST_base_task0.0_entropy0.5_dv4.0_sig0.4/: df_res_fov.csv
result_data/2024-05-27-12-25-59_TEST_noUncert_task0.0_entropy0.5_dv3.0_sig0.3/: df_res_fov.csv
result_data/2024-05-28-14-33-31_TEST_3SEC_gtObj_task0.0_entropy0.5_dv4.0_sig0.4/: df_res_fov.csv
result_data/2024-05-28-14-33-32_TEST_hlObj_task0.0_entropy0.5_dv4.0_sig0.4/: df_res_fov.csv
result_data/2024-05-28-14-33-34_TEST_noGlobalSAM_task0.0_entropy0.5_dv4.0_sig0.4/: df_res_fov.csv
result_data/2024-05-28-14-33-38_TEST_llPrompt_task0.0_entropy0.5_dv4.0_sig0.4/: df_res_fov.csv
result_data/2024-05-28-14-33-40_TEST_llPromptGlobalSAM_task0.0_entropy0.5_dv4.0_sig0.4/: df_res_fov.csv
result_data/2024-05-29-23-22-49_TEST_sacMom0.85-2.5-35deg_task0.0_entropy0.5_dv4.0_sig0.4/: df_res_fov.csv
result_data/2024-05-29-23-23-32_TEST_base_task0.0_entropy1.0_dv5.0_sig0.25/: df_res_fov.csv
result_data/2024-07-11-18-38-29_TEST_llObj_task0.0_entropy0.5_dv5.5_sig0.4/: df_res_fov.csv
result_data/2024-07-11-18-38-30_TEST_noPrompt_task0.0_entropy0.5_dv5.5_sig0.4/: df_res_fov.csv
result_data/2024-07-25-16-16-17_TEST_preSac0.3-1.0_task0.0_entropy0.5_dv4.0_sig0.4/: df_res_fov.csv
segmentation_particle_filter_leightweight/: CMakeLists.txt  package.xml  setup.py
segmentation_particle_filter_leightweight/src/segmentation_particle_filter/: forward_model.py  measurement_model.py  particle.py  particle_filter.py  segmenters.py  utils.py  visualization.py
